--- a/index.html
+++ b/index.html
@@ -5,9 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo Bianca</title>
+    <link rel="stylesheet" href="assents/img/style.css">
 </head>
 <body>
-    <img src="assents/img/foto.png" alt="Bianca Rodrigues">
-    <h1>Bianca Pereira Rodrigues</h1>
+    <div class="cv">
+        <div class="lado-esquerdo">
+                <img class= "foto" src="assents/img/foto.png">
+            <div class="nome">
+                Bianca Pereira Rodrigues
+            </div>
+            <div class="font infos">
+                <div class="titulo dados">
+                    Dados Pessoais
+                </div>
+                <ul>
+                    <li class="email">biancapereirarodrigues02<br>@gmail.com</li>
+                    <li class="tel">(11) 91234-5678</li>
+                    <li class="git">github.com/bianca-rodrigues</li>
+                    <li class="endereco">Rua Taltal, 88 - Jardim - Itu/SP </li>
+                </ul>
+                </div>
+                <div class="sobre">
+                    <div class="titulo resumo">
+                        Sobre
+                    </div>
+                    <div class="font conteudo">
+                       <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae et numquam voluptates sapiente doloremque modi ratione, deserunt optio explicabo molestiae accusamus, ex similique. Perspiciatis aut at dolores neque assumenda possimus.
+                       </p>
+                    </div>
+                   
+            </div>
+            <div class="">
+
+            </div>
+        </div>
+        <div class="cv lado-direito">
+
+        </div>
+    </div>
 </body>
 </html>
