right side update

--- a/index.html
+++ b/index.html
@@ -26,22 +26,68 @@
                 </ul>
                 </div>
                 <div class="sobre">
-                    <div class="titulo resumo">
+                    <div class="titulo">
                         Sobre
                     </div>
-                    <div class="font conteudo">
+                    <div class="font">
                        <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae et numquam voluptates sapiente doloremque modi ratione, deserunt optio explicabo molestiae accusamus, ex similique. Perspiciatis aut at dolores neque assumenda possimus.
                        </p>
                     </div>
                    
             </div>
-            <div class="">
-
             </div>
-        </div>
-        <div class="cv lado-direito">
+            <div class="cv lado-direito">
+                <div class="xp">
+                    <div class="titulo">
+                        Experiência
+                    </div>
+                    <div class="">Estágiaria</div>
+                    <div class="margin data">Julho 2022 - presente</div>
+                        <p class="margin font">Lorem ipsum dolor sit amet consectetur adipisicing elit. A veniam dolor laboriosam, ipsa iste temporibus voluptas est minima consequuntur sit, maxime assumenda magni reiciendis voluptatum voluptates itaque minus. Magni, aut.
+                    </p>
+                <div class="formacao">
+                    <div class="titulo">
+                        Formação
+                    </div>
+                    <div class="cont">
+                        <ul>
+                            <li>
+                                <div class="font">
+                                    Superior | 08/2021 a 07/2024 | Fatec Dom Amaury Castanho
+                                </div>
+                                <div class="font">
+                                    Análise e Desenvolvimento de Sistemas (matutino)
+                                </div>
+                             </li>
+                        </ul>
+                    </div>
+                    
+                </div>
+                <div class="cursos">
+                    <div class="titulo">
+                        Outros Cursos
+                    </div>
+                    <div>
+                        <ul>
+                            <li>
+                                <div class="font">
+                                    Básico | 05/2013 | ONG - João de Barro
+                                </div>
+                                <div class="font">
+                                    Informática
+                                </div>
+                            </li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
 
+                </div>
+
+                </div>
+            </div>
         </div>
     </div>
 </body>
