--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div class="lado-esquerdo">
                 <img class= "foto" src="assents/img/foto.png">
             <div class="nome">
-                Bianca Pereira Rodrigues
+                <b>Bianca Pereira Rodrigues</b>
             </div>
             <div class="font infos">
                 <div class="titulo dados">
-                    Dados Pessoais
+                    <b>Dados Pessoais</b>
                 </div>
                 <ul>
                     <li class="email">biancapereirarodrigues02<br>@gmail.com</li>
@@ -27,36 +27,42 @@
                 </div>
                 <div class="sobre">
                     <div class="titulo">
-                        Sobre
+                        <b>Sobre</b>
                     </div>
                     <div class="font">
                        <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae et numquam voluptates sapiente doloremque modi ratione, deserunt optio explicabo molestiae accusamus, ex similique. Perspiciatis aut at dolores neque assumenda possimus.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae et numquam voluptates sapiente doloremque modi ratione, deserunt optio 
                        </p>
                     </div>
                    
             </div>
             </div>
-            <div class="cv lado-direito">
+            <div class="lado-direito">
                 <div class="xp">
                     <div class="titulo">
-                        Experiência
+                        <b>Experiência</b>
                     </div>
-                    <div class="">Estágiaria</div>
-                    <div class="margin data">Julho 2022 - presente</div>
-                        <p class="margin font">Lorem ipsum dolor sit amet consectetur adipisicing elit. A veniam dolor laboriosam, ipsa iste temporibus voluptas est minima consequuntur sit, maxime assumenda magni reiciendis voluptatum voluptates itaque minus. Magni, aut.
+                <div class="margin-conainer container">
+                    <div class="font">
+                        <b>Estágiaria</b>
+                    </div>
+                    <div class="font"> <b>Julho 2022 - presente</b>
+
+                    </div>
+                </div>
+                        <p class=".font-sub margin font">Lorem ipsum dolor sit amet consectetur adipisicing elit. A veniam dolor laboriosam, ipsa iste temporibus voluptas est minima consequuntur sit, maxime assumenda magni reiciendis voluptatum voluptates itaque minus. Magni, aut.
                     </p>
                 <div class="formacao">
                     <div class="titulo">
-                        Formação
+                        <b>Formação</b>
                     </div>
                     <div class="cont">
                         <ul>
                             <li>
                                 <div class="font">
-                                    Superior | 08/2021 a 07/2024 | Fatec Dom Amaury Castanho
+                                    <b>Superior | 08/2021 a 07/2024 | Fatec Dom Amaury Castanho</b>
                                 </div>
-                                <div class="font">
+                                <div class="font-sub font">
                                     Análise e Desenvolvimento de Sistemas (matutino)
                                 </div>
                              </li>
@@ -66,21 +72,28 @@
                 </div>
                 <div class="cursos">
                     <div class="titulo">
-                        Outros Cursos
+                        <b>Outros Cursos</b>
                     </div>
                     <div>
-                        <ul>
+                        <ul class="">
                             <li>
                                 <div class="font">
-                                    Básico | 05/2013 | ONG - João de Barro
+                                   <b> Básico | 12/2021 | SKILL Idiomas
+                                </b>
                                 </div>
+                                <div class="font-sub">
+                                    Inglês
+                                </div>
+                            </li>
+                            <li>
                                 <div class="font">
+                                    <b>Básico | 05/2013 | ONG - João de Barro
+                                    </b>    
+                                </div>
+                                <div class="font-sub font">
                                     Informática
                                 </div>
                             </li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
                         </ul>
                     </div>
 
