--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo Bianca</title>
     <link rel="stylesheet" href="assents/img/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
     <div class="cv">
@@ -19,10 +21,22 @@
                     <b>Dados Pessoais</b>
                 </div>
                 <ul>
-                    <li class="email">biancapereirarodrigues02<br>@gmail.com</li>
-                    <li class="tel">(11) 91234-5678</li>
+                    <li class="email">
+                        <span class="material-icons">
+                            mail_outline
+                            </span>
+                            biancapereirarodrigues<br>02@gmail.com</li>
+                    <li class="tel">
+                        <span class="material-icons">
+                            call
+                            </span>
+                            (11) 91234-5678</li>
                     <li class="git">github.com/bianca-rodrigues</li>
-                    <li class="endereco">Rua Taltal, 88 - Jardim - Itu/SP </li>
+                    <li class="endereco">
+                        <span class="material-icons">
+                            location_on
+                            </span>
+                            Rua Taltal, 88 - Jardim - Itu/SP </li>
                 </ul>
                 </div>
                 <div class="sobre">
@@ -60,7 +74,7 @@
                         <ul>
                             <li>
                                 <div class="font">
-                                    <b>Superior | 08/2021 a 07/2024 | Fatec Dom Amaury Castanho</b>
+                                    <b>Superior | 08/2021 à 07/2024 | Fatec Dom Amaury Castanho</b>
                                 </div>
                                 <div class="font-sub font">
                                     Análise e Desenvolvimento de Sistemas (matutino)
