--- a/index.html
+++ b/index.html
@@ -21,22 +21,32 @@
                     <b>Dados Pessoais</b>
                 </div>
                 <ul>
-                    <li class="email">
-                        <span class="material-icons">
-                            mail_outline
-                            </span>
-                            biancapereirarodrigues<br>02@gmail.com</li>
-                    <li class="tel">
+                    <div class="email">
+                    <span class="email-icon material-icons">
+                        mail_outline
+                        </span>
+                    <li>
+                        biancapereirarodrigues<br>02@gmail.com</li>
+                    </div>
+                    <div class="tel">
+                    <li>
                         <span class="material-icons">
                             call
                             </span>
                             (11) 91234-5678</li>
-                    <li class="git">github.com/bianca-rodrigues</li>
-                    <li class="endereco">
-                        <span class="material-icons">
-                            location_on
-                            </span>
-                            Rua Taltal, 88 - Jardim - Itu/SP </li>
+                    </div>
+                    <div>
+                        <li>
+                            github.com/bianca-rodrigues
+                        </li>
+                    </div>
+                        <div class="endereco">
+                            <li>
+                                <span class="material-icons">
+                                location_on
+                                </span>
+                                Rua Taltal, 88 - Jardim - Itu/SP </li>
+                        </div>
                 </ul>
                 </div>
                 <div class="sobre">
