--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                         biancapereirarodrigues<br>02@gmail.com</li>
                     </div>
                     <div class="tel">
-                    <li>
                         <span class="material-icons">
                             call
                             </span>
+                    <li>
                             (11) 91234-5678</li>
                     </div>
                     <div>
@@ -41,10 +41,10 @@
                         </li>
                     </div>
                         <div class="endereco">
-                            <li>
-                                <span class="material-icons">
+                            <span class="material-icons">
                                 location_on
                                 </span>
+                            <li>
                                 Rua Taltal, 88 - Jardim - Itu/SP </li>
                         </div>
                 </ul>
@@ -76,6 +76,7 @@
                 </div>
                         <p class=".font-sub margin font">Lorem ipsum dolor sit amet consectetur adipisicing elit. A veniam dolor laboriosam, ipsa iste temporibus voluptas est minima consequuntur sit, maxime assumenda magni reiciendis voluptatum voluptates itaque minus. Magni, aut.
                     </p>
+                    </div>
                 <div class="formacao">
                     <div class="titulo">
                         <b>Formação</b>
@@ -99,7 +100,7 @@
                         <b>Outros Cursos</b>
                     </div>
                     <div>
-                        <ul class="">
+                        <ul>
                             <li>
                                 <div class="font">
                                    <b> Básico | 12/2021 | SKILL Idiomas
@@ -120,12 +121,19 @@
                             </li>
                         </ul>
                     </div>
-
                 </div>
-
+                <div class="habilidades">
+                    <div class="titulo">
+                        <b>Habilidades</b>
+                    </div>
+                    <div class="font-sub">
+                        <ul>
+                            <li>fdfddgdg</li>
+                            <li>fsdfdsfs</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 </body>
 </html>
