--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículo Bianca</title>
-    <link rel="stylesheet" href="assents/img/style.css">
+    <link rel="stylesheet" href="assents/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    rel="stylesheet"> 
 </head>
 <body>
     <div class="cv">
@@ -22,18 +24,20 @@
                 </div>
                 <ul>
                     <div class="email">
-                    <span class="email-icon material-icons">
-                        mail_outline
+                        <span class="email-icon material-icons">
+                            mail_outline
                         </span>
-                    <li>
-                        biancapereirarodrigues<br>02@gmail.com</li>
+                        <li>
+                            biancapereirarodrigues<br>02@gmail.com
+                        </li>
                     </div>
                     <div class="tel">
                         <span class="material-icons">
                             call
-                            </span>
-                    <li>
-                            (11) 91234-5678</li>
+                        </span>
+                        <li>
+                            (11) 91234-5678
+                        </li>
                     </div>
                     <div>
                         <li>
@@ -43,97 +47,123 @@
                         <div class="endereco">
                             <span class="material-icons">
                                 location_on
-                                </span>
+                            </span>
                             <li>
-                                Rua Taltal, 88 - Jardim - Itu/SP </li>
+                                Rua Taltal, 88 - Jardim - Itu/SP
+                            </li>
                         </div>
                 </ul>
-                </div>
-                <div class="sobre">
+            </div>
+            <div class="sobre">
                     <div class="titulo">
                         <b>Sobre</b>
                     </div>
                     <div class="font">
                        <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae et numquam voluptates sapiente doloremque modi ratione, deserunt optio 
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veniam, quod reiciendis magni cumque commodi autem repudiandae, itaque cum modi, impedit reprehenderit quis illum debitis asperiores vitae molestias voluptates totam. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet consectetur adipisicing.
                        </p>
                     </div>
                    
             </div>
-            </div>
-            <div class="lado-direito">
-                <div class="xp">
-                    <div class="titulo">
-                        <b>Experiência</b>
-                    </div>
+        </div>
+        <div class="lado-direito">
+            <div class="xp">
+                <div class="titulo">
+                    <b>Experiência</b>
+                </div>
                 <div class="margin-conainer container">
                     <div class="font">
                         <b>Estágiaria</b>
                     </div>
-                    <div class="font"> <b>Julho 2022 - presente</b>
-
+                    <div class="font">
+                        <b>Julho 2022 - presente</b>
                     </div>
                 </div>
-                        <p class=".font-sub margin font">Lorem ipsum dolor sit amet consectetur adipisicing elit. A veniam dolor laboriosam, ipsa iste temporibus voluptas est minima consequuntur sit, maxime assumenda magni reiciendis voluptatum voluptates itaque minus. Magni, aut.
+                    <p class="margin font-sub">
+                        <b>Área de atuação:</b> Informática<br>
+                        <b>Responsabilidades:</b> Auxiliar na instalação e configuração de equipamentos.
                     </p>
-                    </div>
-                <div class="formacao">
-                    <div class="titulo">
-                        <b>Formação</b>
-                    </div>
-                    <div class="cont">
-                        <ul>
-                            <li>
-                                <div class="font">
-                                    <b>Superior | 08/2021 à 07/2024 | Fatec Dom Amaury Castanho</b>
-                                </div>
-                                <div class="font-sub font">
-                                    Análise e Desenvolvimento de Sistemas (matutino)
-                                </div>
-                             </li>
-                        </ul>
-                    </div>
-                    
+            </div>
+            <div class="formacao">
+                <div class="titulo">
+                    <b>Formação</b>
                 </div>
-                <div class="cursos">
-                    <div class="titulo">
-                        <b>Outros Cursos</b>
-                    </div>
-                    <div>
-                        <ul>
-                            <li>
-                                <div class="font">
-                                   <b> Básico | 12/2021 | SKILL Idiomas
+                <div class="cont">
+                    <ul>
+                        <li>
+                            <div class="font">
+                                <b>Superior | 08/2021 à 07/2024 | Fatec Dom Amaury Castanho</b>
+                            </div>
+                            <div class="font-sub font">
+                                Análise e Desenvolvimento de Sistemas (matutino)
+                            </div>
+                        </li>
+                    </ul>
+                </div>   
+                </div>
+            <div class="cursos">
+                <div class="titulo">
+                    <b>Outros Cursos</b>
+                </div>
+                <div>
+                    <ul>
+                        <li>
+                            <div class="font">
+                                <b> Básico | 12/2021 | SKILL Idiomas
                                 </b>
-                                </div>
-                                <div class="font-sub">
-                                    Inglês
-                                </div>
-                            </li>
-                            <li>
-                                <div class="font">
-                                    <b>Básico | 05/2013 | ONG - João de Barro
-                                    </b>    
-                                </div>
-                                <div class="font-sub font">
-                                    Informática
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="habilidades">
-                    <div class="titulo">
-                        <b>Habilidades</b>
-                    </div>
-                    <div class="font-sub">
-                        <ul>
-                            <li>fdfddgdg</li>
-                            <li>fsdfdsfs</li>
-                        </ul>
-                    </div>
+                            </div>
+                            <div class="font-sub">
+                                Inglês
+                            </div>
+                        </li>
+                        <li>
+                            <div class="font">
+                                <b>Básico | 05/2013 | ONG - João de Barro
+                                </b>    
+                            </div>
+                            <div class="font-sub font">
+                                Informática
+                            </div>
+                        </li>
+                    </ul>
                 </div>
             </div>
+            <div class="titulo">
+                <b>Habilidades</b>
+            </div>
+                <div class="habilidades">
+                    <div class="soft-skills">
+                        <div class="margin-conainer">
+                            <b>Soft skills</b>
+                        </div>
+                        <div class="font-sub">
+                            <ul>
+                                <li>fdfddgdg</li>
+                                <li>fsdfdsfs</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="hard-skills">
+                        <div class="margin-conainer">
+                            <b>Hard skills</b>
+                        </div>
+                        <div>
+                            <img class="icon" src="assents/img/html.png">
+                            <div class="barra">
+                                <div class="progresso"></div>
+                            </div>
+                        </div>
+                        <div>
+                            <img class="icon" src="assents/img/css-3.png">
+                            <div class="barra">
+                                <div class="progresso"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
+    </div>
+        <!--<a href="https://www.flaticon.com/br/icones-gratis/html" title="html ícones">Html ícones criados por Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/br/icones-gratis/css" title="css ícones">Css ícones criados por Pixel perfect - Flaticon</a>-->
 </body>
 </html>
