--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 <body>
     <div class="cv">
         <div class="lado-esquerdo">
-                <img class= "foto" src="assents/img/foto.png">
-            <div class="nome">
+                <img class= "foto" src="assents/img/WhatsApp Image 2022-09-13 at 19.38.43.jpeg">
+            <div class="color nome">
                 <b>Bianca Pereira Rodrigues</b>
             </div>
             <div class="font infos">
-                <div class="titulo dados">
-                    <b>Dados Pessoais</b>
+                <div class="titulo" style="margin-top: -80px;">
+                    <b class="color">Dados Pessoais</b>
                 </div>
                 <ul>
                     <div class="email">
                         <span class="email-icon material-icons">
                             mail_outline
                         </span>
-                        <li>
+                        <li style="margin-left: 15px;">
                             biancapereirarodrigues<br>02@gmail.com
                         </li>
                     </div>
@@ -35,20 +35,21 @@
                         <span class="material-icons">
                             call
                         </span>
-                        <li>
+                        <li style="margin-left: 15px;">
                             (11) 91234-5678
                         </li>
                     </div>
-                    <div>
-                        <li>
-                            github.com/bianca-rodrigues
+                    <div class="git">
+                        <img class="git-icon" src="assents/img/github.png" alt="">
+                        <li style="margin-left: 15px;">
+                            <a href="https://github.com/bianca-rodrigues">github.com/bianca-rodrigues</a>
                         </li>
                     </div>
                         <div class="endereco">
                             <span class="material-icons">
                                 location_on
                             </span>
-                            <li>
+                            <li style="margin-left: 15px;">
                                 Rua Taltal, 88 - Jardim - Itu/SP
                             </li>
                         </div>
@@ -56,11 +57,11 @@
             </div>
             <div class="sobre">
                     <div class="titulo">
-                        <b>Sobre</b>
+                        <b class="color">Sobre</b>
                     </div>
                     <div class="font">
                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias veniam, quod reiciendis magni cumque commodi autem repudiandae, itaque cum modi, impedit reprehenderit quis illum debitis asperiores vitae molestias voluptates totam. Lorem ipsum dolor sit. Lorem ipsum dolor sit amet consectetur adipisicing.
+                         Sou uma estudante no início de uma jornada pelo mundo do desenvolvimento.
                        </p>
                     </div>
                    
@@ -69,30 +70,31 @@
         <div class="lado-direito">
             <div class="xp">
                 <div class="titulo">
-                    <b>Experiência</b>
+                    <b class="color">Experiência</b>
                 </div>
                 <div class="margin-conainer container">
                     <div class="font">
-                        <b>Estágiaria</b>
+                        <b class="color">Estágiaria</b>
                     </div>
                     <div class="font">
-                        <b>Julho 2022 - presente</b>
+                        <b class="color">Julho 2022 - presente</b>
                     </div>
                 </div>
                     <p class="margin font-sub">
-                        <b>Área de atuação:</b> Informática<br>
-                        <b>Responsabilidades:</b> Auxiliar na instalação e configuração de equipamentos.
+                        <b class="color">Área de atuação:</b>  Informática<br>
+                        <br>
+                        <b class="color">Responsabilidades:</b> Auxiliar na instalação e configuração de equipamentos; Auxiliar no suporte ao usuário; Fornecer suporte a professores e alunos no uso do laboratório de informática; Auxiliar na instalação de softwares e hardwares.
                     </p>
             </div>
             <div class="formacao">
                 <div class="titulo">
-                    <b>Formação</b>
+                    <b class="color">Formação</b>
                 </div>
-                <div class="cont">
+                <div>
                     <ul>
                         <li>
                             <div class="font">
-                                <b>Superior | 08/2021 à 07/2024 | Fatec Dom Amaury Castanho</b>
+                                <b class="color">Superior | 08/2021 à 07/2024 | Fatec Dom Amaury Castanho</b>
                             </div>
                             <div class="font-sub font">
                                 Análise e Desenvolvimento de Sistemas (matutino)
@@ -103,13 +105,13 @@
                 </div>
             <div class="cursos">
                 <div class="titulo">
-                    <b>Outros Cursos</b>
+                    <b class="color">Outros Cursos</b>
                 </div>
                 <div>
                     <ul>
                         <li>
                             <div class="font">
-                                <b> Básico | 12/2021 | SKILL Idiomas
+                                <b class="color"> Básico | 12/2021 | SKILL Idiomas
                                 </b>
                             </div>
                             <div class="font-sub">
@@ -118,7 +120,7 @@
                         </li>
                         <li>
                             <div class="font">
-                                <b>Básico | 05/2013 | ONG - João de Barro
+                                <b class="color">Básico | 05/2013 | ONG - João de Barro
                                 </b>    
                             </div>
                             <div class="font-sub font">
@@ -128,24 +130,25 @@
                     </ul>
                 </div>
             </div>
-            <div class="titulo">
-                <b>Habilidades</b>
+            <div class="titulo" style="margin-top: 40px;">
+                <b class="color">Habilidades</b>
             </div>
                 <div class="habilidades">
                     <div class="soft-skills">
                         <div class="margin-conainer">
-                            <b>Soft skills</b>
+                            <b class="color">Soft skills</b>
                         </div>
                         <div class="font-sub">
                             <ul>
-                                <li>fdfddgdg</li>
-                                <li>fsdfdsfs</li>
+                                <li>Empatia</li>
+                                <li>Ética No Trabalho</li>
+                                <li>Colaboração</li>
                             </ul>
                         </div>
                     </div>
                     <div class="hard-skills">
                         <div class="margin-conainer">
-                            <b>Hard skills</b>
+                            <b class="color">Hard skills</b>
                         </div>
                         <div>
                             <img class="icon" src="assents/img/html.png">
@@ -163,7 +166,18 @@
                 </div>
         </div>
     </div>
-        <!--<a href="https://www.flaticon.com/br/icones-gratis/html" title="html ícones">Html ícones criados por Freepik - Flaticon</a>
-        <a href="https://www.flaticon.com/br/icones-gratis/css" title="css ícones">Css ícones criados por Pixel perfect - Flaticon</a>-->
+    <footer>
+        <div>
+            <div>
+                <a href="https://www.flaticon.com/br/icones-gratis/html" title="html ícones">Html ícones criados por Freepik - Flaticon</a>
+            </div>
+            <div>
+                <a href="https://www.flaticon.com/br/icones-gratis/css" title="css ícones">Css ícones criados por Pixel perfect - Flaticon</a>
+            </div>
+            <div>
+                <a href="https://www.flaticon.com/br/icones-gratis/github" title="github ícones">Github ícones criados por Pixel perfect - Flaticon</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
