--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="margin-conainer container">
                     <div class="font">
-                        <b class="color">Estágiaria</b>
+                        <b class="color">Estagiária</b>
                     </div>
                     <div class="font">
                         <b class="color">Julho 2022 - presente</b>
